--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_REACT_APP_BASE_URL=https://api.openweathermap.org
 
-VITE_REACT_APP_API_KEY=de5856f179727554b6fc7ba819f420ec
+VITE_REACT_APP_API_KEY=
